# ai-agents

./: README.md
multi-agent-system/: README.md  pyproject.toml
multi-agent-system/backend/: app.py  orchestrator.py  schemas.py
multi-agent-system/backend/agents/: event_info.py  schedule_agent.py  stay_agent.py  travel_agent.py
multi-agent-system/backend/test/: test_agent.py
multi-agent-system/frontend/: streamlit_app.py
simple-agents/: README.md
